- Automatic bars are now placed only when length of measure exactly matches metre (used to be greater or equal)
- Fixed: When double-clicking the play button the tune was paused. Now it starts loop-mode as it should
- Added loop checkbox to toolbar so looping of a tune can be switched on or off during play
- Path selected for format-file is used when using the browse button.

1.3.7.4
- New feature: When playing a checkbox 'Follow score' appears. When checked you can see which notes are being played. The slider next to 'Follow score' can be used to compensate for timing errors.
- Now not only Python 2, but also Python 3 compatible.
- Syntax coloring routines have been optimized and syntax coloring is now three times as fast (but perhaps only noticable when going to last tune of very large abc file)
- Other speed improvements but less noticable like selecting multiple notes when dragging.
- Last used format file folder will be remembered when clearing the format file folder and used when browsing
- 'Export to ABC' added, but only available when multiple tunes have been selected. A new file is created with only the selected tunes
- 'Export to single PDF' added, but only available when multiple tunes have been selected.
- 'File -> Close' does not close EasyABC but only the current file (as suggested by John Burke)
- 'File -> Close' shortcut is now Ctrl-W (was Alt-F4 but only on Windows)

1.3.7.5
- 'Follow score' improved (Windows version)
- better unicode support
- repeat symbol (looks like percent sign) better drawn
- exporting a file generates a non-existing filename to prevent accidental overwrite
- more Python 3 issues fixed
- several minor bugfixes
- Linux only: looks for needed executables in /usr/bin and /usr/local/bin

1.3.7.6
- German translation added (thanks to Bernhard Weichel)
- Small tweaks for 'Follow score'
- Music score window can now be docked elsewhere (for example next to the editor window)
