@@ -526,4 +526,7 @@ different panes. Tie/untie option added for notes. Broken rhythm
 - German translation added (thanks to Bernhard Weichel)
 - Small tweaks for 'Follow score'
 - Music score window can now be docked elsewhere (for example next to the editor window)
-
+- fixed menus (an error was displayed after opening another abc-file)
+- MAC only: a delay was added before playing to fix first notes not being played
+- Added to the Help menu a link to 'ABC Quick Reference Card'
+- after switching to another format file in abc-settings the music score refreshes
